# moqx

./: .clang-format  .clang-tidy  .dockerignore  .gitattributes  .gitignore  .gitmodules  .scratch  BUILD.md  CLAUDE.md  CMakeLists.txt  CMakePresets.json  CODEOWNERS  CONTRIBUTING.md  README.md  RUNNING.md  SECURITY.md  config.example.yaml
.github/workflows/: auto-merge-bump.yml  auto-merge-moxygen.yml  bump-moxygen.yml  ci-main.yml  ci-pr.yml  ci.yml  deploy-relay.yml  dev-build.yml  moxygen-sync.yml  notify-ci-failure.yml  notify-main-failure.yml  perf-reset.yml  perf-test.yml  publish.yml  submodule-update.yml  update-moxygen-submodule.yml  verify.yml  version-release.yml
benchmark/: BenchmarkMain.cpp  CMakeLists.txt  ConfigResolver.cpp  MoQFramer.cpp  MoQStatsCollector.cpp  MoQTExtensions.cpp  PrometheusFormat.cpp  StatsRegistry.cpp  bounded_histogram.cpp  config_loader.cpp  config_resolver.cpp  moq_stats_collector.cpp  moqt_extensions.cpp  moqt_framer.cpp  prometheus_format.cpp  service_matcher.cpp  stats_registry.cpp
cmake/: .hidden  CPM.cmake  Findc-ares.cmake  Lint.cmake
design/: ARCHITECTURE.md  AdminServerAndStats.md  CI_OVERVIEW.md  GITHUB_WORKFLOW.md  README.md  RELAY_HOPS_IMPLEMENTATION_PLAN.md  ROADMAP.md  black-box.md  ci-architecture.md  configuration.example.yaml  configuration.md  gummy-bear.md  hot-reloading.md  miss-handler.md  module-loader.md  moxygen-vanilla-plan.md  moxygen_compat.md  moxygen_transport_pluggability_compat.md
docker/: .env.example  Dockerfile  Dockerfile.ci  Dockerfile.interop-client  cloudflare.ini.example  config.docker.yaml  config.production.yaml  docker-compose.yml  entrypoint.sh  moqx-run.sh  relay-deploy.sh  route53-iam-policy.json  setup-host.sh
docker/grafana/: README.md  export-dashboards.sh  import-dashboards.sh  publish-public-dashboard.sh
docker/json-exporter/: json-exporter.yml
docker/nginx/: 40-htpasswd.sh  denylist.conf
docker/prometheus/: prometheus.yml
docs/: BUILD.md  ci-architecture.md  config.md  draft-ietf-moq-transport-18.txt  draft-lcurley-moq-relay-hops.txt  logging.md  metrics.md  perf-tracking.md  relay-hops.md  release.md
docs/dev/: config.md  local-forwarder-flow.md  track-filter-ranking.md
include/moqx/: MoqxPicoRelayServer.h  MoqxRelay.h  MoqxRelayContext.h  MoqxRelayServer.h  MoqxServerFactory.h  ServiceMatcher.h  UpstreamProvider.h  relay_auth.h
include/o_rly/: ORelay.h  ORelayServer.h  ServiceMatcher.h  UpstreamProvider.h  relay.h  relay_auth.h
moxygen/: CMakeLists.txt  MoQFramer.cpp  MoQSession.cpp  MoQSession.h  MoQTypes.cpp  MoQTypes.h
scripts/: README.md  _debug_crash.sh  _debug_crash2.sh  _debug_dir2.sh  _debug_relay_chain.sh  build-meta-deps.sh  build-moxygen.sh  build.sh  collect-libs.sh  config-schema-to-markdown.sh  config.bench.yaml  configure.sh  detect-platform.sh  docker-build.sh  docker-shell.sh  format.sh  lint.sh  log-cleanup.sh  mlog-cleanup.sh  moqx-run.sh  perf-compare.py  perf-metrics.sh  perf-results-to-json.sh  perf-test-ci.sh  perf-test.sh  run_topn_comprehensive_perf.sh  run_topn_e2e_perf.py  run_topn_e2e_report.sh  run_topn_perf.sh  run_topn_viz.sh  setup-deps-dev-artifact.sh  setup-deps-release.sh  setup-deps-source.sh  setup-deps-standalone.sh  setup-deps-tarball.sh  setup-deps.sh  sync-relay.sh  test-relay-shutdown.sh  test.sh  test_relay_chain.sh
src/: LoggingMultiFlag.cpp  LoggingMultiFlag.h  LoggingShortcut.cpp  LoggingShortcut.h  MoqxCache.cpp  MoqxCache.h  MoqxPicoRelayServer.cpp  MoqxPicoRelayServer.h  MoqxQmuxRelayServer.cpp  MoqxQmuxRelayServer.h  MoqxRelay.cpp  MoqxRelay.h  MoqxRelayContext.cpp  MoqxRelayContext.h  MoqxRelayServer.cpp  MoqxRelayServer.h  MoqxServerFactory.h  MoqxSession.cpp  MoqxSession.h  NamespaceTree.cpp  NamespaceTree.h  ORelay.cpp  ORelayServer.cpp  ServiceMatcher.cpp  ServiceMatcher.h  SubscriptionRegistry.cpp  SubscriptionRegistry.h  UpstreamProvider.cpp  UpstreamProvider.h  main.cpp  relay.cpp  relay_auth.cpp
src/admin/: AdminServer.cpp  AdminServer.h  BuiltinRoutes.cpp  BuiltinRoutes.h  (+11 more)
status/: index.html
test/: AuthTest.cpp  AuthTokenIssuerTest.cpp  CMakeLists.txt  CborReaderTest.cpp  CrossExecFilterTest.cpp  LoggingMultiFlagTest.cpp  LoggingShortcutTest.cpp  MoQCrossExecFilterTest.cpp  MoQIntegrationTestFixture.h  MoQPublisherCrossExecFilterTest.cpp  MoQSubscriberCrossExecFilterTest.cpp  MoqxCacheTest.cpp  MoqxRelayContextTest.cpp  MoqxRelayDataPlaneTests.cpp  MoqxRelayFetchTests.cpp  MoqxRelayNGRTests.cpp  MoqxRelayPeerTests.cpp  MoqxRelayPublishTests.cpp  MoqxRelaySubNsTests.cpp  MoqxRelaySubscribeTests.cpp  MoqxRelayTest.cpp  MoqxRelayTestFixture.cpp  MoqxRelayTestFixture.h  MoqxRelayTestModes.cpp  MoqxRelayTrackStatusTests.cpp  MoqxRelayTracksTests.cpp  MoqxTrackFilterTest.cpp  NamespaceTreeTest.cpp  PrivacyPassTest.cpp  PropertyRankingBaseTest.cpp  PropertyRankingSelfExclusionTest.cpp  PublisherCrossExecFilterTest.cpp  ServiceMatcherTest.cpp  SimpleTopNTrackerBaseTest.cpp  SimpleTopNTrackerFastRejectionTest.cpp  SimpleTopNTrackerLoadTest.cpp  SimpleTopNTrackerLockFreeTest.cpp  SimpleTopNTrackerPerfTest.cpp  SubscriberCrossExecFilterTest.cpp  SubscriptionRegistryTest.cpp  (+24 more)
test/config/: ConfigResolverTest.cpp  ConfigSerializerTest.cpp  LoaderTest.cpp  Pkcs12Test.cpp  Pkcs12TestUtils.h  TestUtils.h  config_resolver_test.cpp  loader_test.cpp  test_utils.h
test/stats/: BoundedHistogramTest.cpp  MoQStatsCollectorTest.cpp  PicoQuicStatsCollectorTest.cpp
test/tls/: DirectoryCertLoaderTest.cpp  FileCertLoaderTest.cpp  FizzContextFactoryTest.cpp  InsecureCertProviderTest.cpp  TestCertUtils.h  TlsProviderRegistryTest.cpp
test/util/: TempDir.h
tests/: MoQIntegrationTestFixture.h  MoqxRelayContextTest.cpp  MoqxRelayTest.cpp  MoqxTrackFilterTest.cpp  ORelayTest.cpp  ServiceMatcherTest.cpp  TestMain.cpp  TestUtils.cpp  TestUtils.h  TrackFilterLoadTest.cpp  UpstreamProviderTest.cpp  smoke_test.cpp  test.config.yaml  test_admin_cache_purge.sh  test_admin_info.sh  test_admin_metrics.sh  test_admin_tls.sh  test_relay_chain.sh
tools/: analyze_topn_perf.py  metrics-dashboard.html  moq_decode.py  topn_viz.py
(+175 files in other folders)
